--- a/templates/page/new/_item.html
+++ b/templates/page/new/_item.html
@@ -1,6 +1,6 @@
 <div class="product-container">
 													<div class="left-block">
-														<div class="product-image-container">
+														<div class="">
 															<a class="product_img_link" href="{% url 'product' item.name_slug %}" title="{{ item.name }}">
 																<img  alt="" class="img-responsive" width="480" height="640"
                                                                            {% for image in item.itemimage_set.all %}
@@ -12,34 +12,38 @@
 {#															<span class="label-new label">New</span>#}
 {#															<span class="label-sale label">Sale</span>#}
 {#															<span class="label-reduction label">-5%</span>#}
-														</div>
-														<div class="box-buttons">
-																<a class="ajax_add_to_cart_button button btn" href="javascript:void(0)"
+                                                        <div class="item-buttons">
+
+                                                                <a class="ajax_add_to_cart_button item-button-cart" href="javascript:void(0)"
                                                                    id="{{ item.id }}_submit"
                                                                     data-item_id="{{ item.id }}"
                                                                     data-item_name="{{ item.name }}"
                                                                     data-item_price="{{ item.price }}"
 
                                                                     data-item_image="{{ item.itemimage_set.first.image_small }}"
-                                                                    onclick="quick_add_to_cart(this)"  rel="nofollow" title="В корзину"><i class="zmdi zmdi-shopping-cart"></i></a>
-{#																<a class="button btn quick-view" href="#" title="Quick view">#}
-{#																	<i class="zmdi zmdi-eye"></i>#}
-{#																</a>#}
-                                                             {% if item.id in wishlist_ids %}
-                                                                <a onclick="return false;" data-placement="left" data-original-title="Add to Wishlist" data-toggle="tooltip" class="button btn addToWishlist">
+                                                                    onclick="quick_add_to_cart(this)"  rel="nofollow" title="В корзину"><i class="zmdi zmdi-shopping-cart"></i> в корзину</a>
+
+
+                                                                  {% if item.id in wishlist_ids %}
+                                                                <a onclick="return false;" data-placement="left" data-original-title="Add to Wishlist" data-toggle="tooltip" class="addToWishlist item-button-wishlist">
                                                                     <i class="zmdi zmdi-favorite"></i>
+                                                                в избранном
                                                                 </a>
                                                             {% else %}
-                                                                <a onclick="wishlist_add({{ item.id }});return false;" data-placement="left" data-original-title="В закладки" data-toggle="tooltip" class="button btn addToWishlist">
+                                                                <a onclick="wishlist_add({{ item.id }});return false;" data-placement="left" data-original-title="В закладки" data-toggle="tooltip"
+                                                                   class="addToWishlist item-button-wishlist">
                                                                    <i class="zmdi zmdi-favorite-outline"></i>
+                                                                в избранное
                                                                 </a>
                                                             {% endif %}
-{#																<a class="button btn add_to_compare" href="#" title="Quick view">#}
-{#																	<i class="zmdi zmdi-refresh-alt"></i>#}
-{#																</a>#}
+
+
+
+                                                        </div>
 														</div>
+
 													</div><!--end left block -->
-													<div class="right-block">
+													<div style="margin-top: 20px;" class="right-block">
 														<div class="product-box">
 															<h5 class="name">
 																<a class="product-name" href="{% url 'product' item.name_slug %}" title="{{ item.name }}">
