--- a/templates/page/new/index.html
+++ b/templates/page/new/index.html
@@ -38,10 +38,16 @@
                         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                             <div class="category-image">
                                 <a  href="{% url 'category' category.name_slug %}" title=""><img class="img-responsive" src="{{ category.image.url }}" alt=""></a>
-                                <div class="category-image-caption">
+                                <!--div class="category-image-caption">
                                     <a  href="{% url 'category' category.name_slug %}" title="">
                                         <h5 >{{ category.name }}</h5>
                                         <span class="category-description">{{ category.short_description }}</span>
+                                    </a>
+                                </div-->
+                                <div class="category-image-caption-new">
+                                     <a  href="{% url 'category' category.name_slug %}" title="">
+                                       {{ category.name }}
+
                                     </a>
                                 </div>
 
