--- a/static/new_static/css/custom.css
+++ b/static/new_static/css/custom.css
@@ -299,7 +299,7 @@
     justify-content: space-evenly;
     /*padding: 10px 0;*/
    line-height: 50px;
-   background: rgba(255, 255, 255, 0.5);
+   background: rgba(255, 255, 255, 0.65);
 
 }
 
@@ -347,7 +347,7 @@ h4{
   position: absolute;
   bottom: 0;
   height: 40%;
-  background: #0003;
+  background: rgba(0, 0, 0, 0.5);
   width: 100%;
 }
 
@@ -357,6 +357,7 @@ h4{
   right: 10%;
   bottom: 30%;
   color: #fff;
+  font-size: 17px;
   text-transform: uppercase;
   border: 1px solid #fff;
   padding: 15px 10px;
