--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,7 +52,7 @@
 @import url("btn.css");
 /* Template Theme color skin */
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900,900italic);
-@import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700&display=swap');
 
 /* google webfont */
 
@@ -145,7 +145,7 @@ h3 code {
 
 .block-title-1 {
     display: block;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     font-size: 14px;
     font-weight: normal;
     letter-spacing: 2px;
@@ -457,7 +457,7 @@ ul.list-border li:hover {
 
 .modal-title-site {
     color: #FFFFFF;
-    font-family: Oswald;
+    font-family: Roboto Condensed;
     font-size: 38px;
     font-weight: lighter;
     padding: 13px 0;
@@ -1026,7 +1026,7 @@ legend {
 
 .promo-1 {
     color: #FFFFFF;
-    font-family: Oswald, Helvetica Neue;
+    font-family: Roboto Condensed, Helvetica Neue;
     margin-bottom: 15px;
     font-weight: lighter;
     padding: 5px 0;
@@ -1348,7 +1348,7 @@ legend {
 
 .box-4in .price, .box-text-table .dealprice {
     display: block;
-    font-family: oswald, Helvetica Neue, Arial, Helvetica, sans-serif;
+    font-family: Roboto Condensed, Helvetica Neue, Arial, Helvetica, sans-serif;
     font-size: 26px;
     font-weight: lighter;
     margin-bottom: 15px;
@@ -1389,13 +1389,13 @@ legend {
 .box-text h1, .box-text-cell-inner h1 {
     font-size: 36px;
     letter-spacing: 3px;
-    font-family: Oswald, Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-family: Roboto Condensed, Helvetica Neue, Helvetica, Arial, sans-serif;
     font-weight: normal;
     text-transform: uppercase;
 }
 
 .box-text p, .box-text-cell-inner p {
-    font-family: Oswald;
+    font-family: Roboto Condensed;
     font-weight: lighter;
 }
 
@@ -1572,7 +1572,7 @@ h1.bolder-style.dark, h1.bolder-style.dark a {
 .box-price-tag .price {
     background: #fff;
     color: #454545;
-    font-family: oswald;
+    font-family: Roboto Condensed;
     font-size: 28px;
     font-weight: normal;
     letter-spacing: 2px;
@@ -2043,7 +2043,7 @@ h1.bolder-style.dark, h1.bolder-style.dark a {
     display: block;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
     float: left;
-    font-family: Oswald, Helvetica Neue;
+    font-family: Roboto Condensed, Helvetica Neue;
     font-size: 15px;
     font-weight: normal;
     list-style: none outside none;
@@ -2105,7 +2105,7 @@ h1.bolder-style.dark, h1.bolder-style.dark a {
 }
 
 .sectionCategoryIntro h1 {
-    font-family: Oswald;
+    font-family: Roboto Condensed;
     font-size: 22px;
     font-weight: lighter;
     letter-spacing: 2px;
@@ -2185,7 +2185,7 @@ h1.bolder-style.dark, h1.bolder-style.dark a {
 }
 
 #productShowCase .product-title {
-    font-family: oswald;
+    font-family: Roboto Condensed;
     font-size: 24px;
     font-weight: normal;
     letter-spacing: 0.25px;
@@ -2224,7 +2224,7 @@ h1.bolder-style.dark, h1.bolder-style.dark a {
 
 .boxes-title-1 {
     background: #ebebeb;
-    font-family: Oswald;
+    font-family: Roboto Condensed;
     font-weight: normal;
     letter-spacing: 1px;
     margin-bottom: 30px;
@@ -2356,7 +2356,7 @@ h1.bolder-style.dark, h1.bolder-style.dark a {
     color: white;
     display: block;
     font-size: 30px;
-    font-family: Oswald;
+    font-family: Roboto Condensed;
     font-weight: normal;
     letter-spacing: 3px;
     padding: 0 10px;
@@ -2828,7 +2828,7 @@ h1.bolder-style.dark, h1.bolder-style.dark a {
     color: #FFFFFF;
     display: inline-block;
     float: left;
-    font-family: Oswald, Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-family: Roboto Condensed, Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 16px;
     font-weight: lighter;
     height: 100%;
@@ -2841,7 +2841,7 @@ h1.bolder-style.dark, h1.bolder-style.dark a {
     color: #fff;
     display: inline-block;
     float: left;
-    font-family: Oswald, Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-family: Roboto Condensed, Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 16px;
     font-weight: lighter;
     height: 100%;
@@ -3805,7 +3805,7 @@ h5.parallaxSubtitle {
 }
 
 .product-code {
-    font-family: oswald, Helvetica Neue, Arial, sans-serif;
+    font-family: Roboto Condensed, Helvetica Neue, Arial, sans-serif;
     font-size: 14px;
     font-weight: lighter;
     letter-spacing: 1px;
@@ -3859,7 +3859,7 @@ h5.parallaxSubtitle {
 }
 
 .nav-tabs li a {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     font-size: 14px;
     font-weight: 200;
     letter-spacing: 2px;
@@ -3961,7 +3961,7 @@ h5.parallaxSubtitle {
     color: #FFFFFF;
     display: block;
     float: left;
-    font-family: Oswald, Helvetica Neue, Arial, sans-serif;
+    font-family: Roboto Condensed, Helvetica Neue, Arial, sans-serif;
     font-size: 18px;
     font-weight: lighter;
     line-height: 1em;
@@ -3997,7 +3997,7 @@ button.first {
 .incaps {
     display: block;
     float: left;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
     font-size: 14px;
     font-weight: normal;
     letter-spacing: 2px;
@@ -4515,7 +4515,7 @@ div.quickview {
 
 .btn-quickview {
     border-radius: 2px;
-    font-family: "Oswald", Helvetica Neue, Arial, sans-serif;
+    font-family: "Roboto Condensed", Helvetica Neue, Arial, sans-serif;
     letter-spacing: 2px;
     color: #454545 !important;
     text-transform: uppercase;
@@ -4759,7 +4759,7 @@ div.quickview {
 
 #modalAds h3 {
     color: #444;
-    font-family: Oswald, Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-family: Roboto Condensed, Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 26px;
     font-weight: normal;
     letter-spacing: 1px;
@@ -4769,7 +4769,7 @@ div.quickview {
 
 .discountLg {
     color: #000;
-    font-family: Oswald, Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-family: Roboto Condensed, Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 46px;
     font-weight: bold;
     letter-spacing: 3px;
@@ -4851,7 +4851,7 @@ div.quickview {
     color: #000;
     display: inline-block;
     clear: both;
-    font-family: Oswald, Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-family: Roboto Condensed, Helvetica Neue, Helvetica, Arial, sans-serif;
     left: 2px;
     margin-top: 20px;
     text-decoration: underline;
