--- a/static/css/btn.css
+++ b/static/css/btn.css
@@ -392,7 +392,7 @@ fieldset[disabled] .btn-inverse.active {
 }
 .btn-stroke {
   background: rgba(0, 0, 0, 0);
-  font-family: "Oswald", Helvetica Neue, Arial, sans-serif;
+  font-family: "Roboto Condensed", Helvetica Neue, Arial, sans-serif;
   letter-spacing: 2px;
   padding: 15px 20px;
   text-align: center;
@@ -426,7 +426,7 @@ fieldset[disabled] .btn-inverse.active {
 }
 .btn-dark {
   background: #303030;
-  font-family: "Oswald", Helvetica Neue, Arial, sans-serif;
+  font-family: "Roboto Condensed", Helvetica Neue, Arial, sans-serif;
   letter-spacing: 2px;
   padding: 15px 20px;
   text-align: center;
@@ -455,7 +455,7 @@ fieldset[disabled] .btn-inverse.active {
 }
 .btn-gray {
   background: #c8c8c8;
-  font-family: "Oswald", Helvetica Neue, Arial, sans-serif;
+  font-family: "Roboto Condensed", Helvetica Neue, Arial, sans-serif;
   letter-spacing: 2px;
   padding: 15px 20px;
   text-align: center;
@@ -479,7 +479,7 @@ fieldset[disabled] .btn-inverse.active {
 }
 .btn-stroke-dark {
   background: rgba(0, 0, 0, 0);
-  font-family: "Oswald", Helvetica Neue, Arial, sans-serif;
+  font-family: "Roboto Condensed", Helvetica Neue, Arial, sans-serif;
   letter-spacing: 2px;
   padding: 15px 20px;
   text-align: center;
@@ -491,7 +491,7 @@ fieldset[disabled] .btn-inverse.active {
 }
 .btn-stroke-light {
   background: rgba(0, 0, 0, 0);
-  font-family: "Oswald", Helvetica Neue, Arial, sans-serif;
+  font-family: "Roboto Condensed", Helvetica Neue, Arial, sans-serif;
   letter-spacing: 2px;
   padding: 15px 20px;
   text-align: center;
