--- a/static/css/v7.css
+++ b/static/css/v7.css
@@ -302,7 +302,7 @@ html {
   max-width: 60%;
 }
 .slider-hero-caption .slide-caption-subtitle {
-  font-family: oswald, sans-serif;
+  font-family: Roboto Condensed, sans-serif;
   font-weight: normal;
 }
 .slider-hero-caption .slide-caption-subtitle.top {
@@ -348,7 +348,7 @@ html {
   }
 }
 .slider-hero-caption .slide-caption-title.slide-caption-title-2 {
-  font-family: oswald, Helvetica Neue, Arial, Helvetica, sans-serif;
+  font-family: Roboto Condensed, Helvetica Neue, Arial, Helvetica, sans-serif;
   font-weight: normal;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -387,7 +387,7 @@ html {
   border-radius: 2px;
   border-width: 1px;
   color: #fff;
-  font-family: Oswald;
+  font-family: Roboto Condensed;
   font-size: 12px;
   font-weight: lighter;
   letter-spacing: 1px;
@@ -438,7 +438,7 @@ html {
   letter-spacing: 2px;
   color: #333;
   letter-spacing: 0.1em;
-  font-family: "oswald", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 11px;
   text-transform: uppercase;
 }
@@ -467,7 +467,7 @@ html {
     letter-spacing: 2px;
     color: #333;
     letter-spacing: 0.1em;
-    font-family: "oswald", sans-serif;
+    font-family: "Roboto Condensed", sans-serif;
     font-size: 11px;
     text-transform: uppercase;
     -webkit-transition: all 400ms ease-in-out 0s 1s linear 0s;
@@ -887,7 +887,7 @@ html {
   text-align: center;
 }
 .hero-section-header .hero-section-title {
-  font-family: oswald, Helvetica Neue, Arial, Helvetica, sans-serif;
+  font-family: Roboto Condensed, Helvetica Neue, Arial, Helvetica, sans-serif;
   font-size: 22px;
   text-transform: uppercase;
   color: #1e1e1e;
@@ -977,7 +977,7 @@ html {
 .block-explore .inner .overly .explore-title {
   color: white;
   display: block;
-  font-family: Oswald;
+  font-family: Roboto Condensed;
   font-size: 24px;
   font-weight: normal;
   letter-spacing: 3px;
@@ -1039,7 +1039,7 @@ html {
   text-align: center;
 }
 .section-hero-parallax .hero-parallax-content h3 {
-  font-family: oswald, Helvetica Neue, Arial, Helvetica, sans-serif;
+  font-family: Roboto Condensed, Helvetica Neue, Arial, Helvetica, sans-serif;
   font-size: 70px;
   line-height: 90px;
   text-transform: uppercase;
@@ -1071,7 +1071,7 @@ html {
 }
 .footer-title {
   color: #000;
-  font-family: "oswald", Arial, Helvetica, sans-serif;
+  font-family: "Roboto Condensed", Arial, Helvetica, sans-serif;
   font-size: 14px;
   font-weight: normal;
   margin-bottom: 15px;
