--- a/static/new_static/css/bootstrap-theme.css
+++ b/static/new_static/css/bootstrap-theme.css
@@ -247,7 +247,7 @@ html {
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   font-size: 14px;
   line-height: 1.85714;
   color: #666666;
@@ -332,7 +332,7 @@ hr {
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
   font-weight: 700;
   line-height: 1.85714;
   color: #4c4c4c;
