--- a/static/new_static/css/style.css
+++ b/static/new_static/css/style.css
@@ -156,7 +156,7 @@
 	background-color: #366D73;
 	display: inline-block;;
 	text-transform: uppercase;
-	font-family: "Open Sans", sans-serif;
+	font-family: "Roboto Condensed", sans-serif;
 	position: relative;
 }
 .tiva-slideshow-wrapper .tiva-caption .medium_16 {
