--- a/templates/basic.html
+++ b/templates/basic.html
@@ -25,8 +25,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 		<!-- Google Fonts -->
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
-
+{#		<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">#}
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
 		<!-- Vendor CSS -->
 		<link rel="stylesheet" href="{% static '/new_static/css/bootstrap-theme.css' %}">
 		<link rel="stylesheet" href="{% static '/new_static/css/font-awesome.min.css' %}">
