--- a/templates/page/new/index.html
+++ b/templates/page/new/index.html
@@ -53,7 +53,7 @@
                                  <div class="category-image-caption-new-1">
                                      <div class="category-image-inner">
                                             <a  href="{% url 'category' category.name_slug %}" title="">
-                                       {{ category.name }}
+                                       {{ category.name | upper }}
                                     </a>
                                      </div>
                                 </div>
