--- a/static/new_static/css/custom.css
+++ b/static/new_static/css/custom.css
@@ -300,7 +300,7 @@
 
     /*padding: 10px 0;*/
    line-height: 50px;
-   background: rgba(255, 255, 255, 0.65);
+   padding: 3px 3px;
 
 }
 
@@ -313,7 +313,7 @@
   width: 100%;
   cursor: pointer;
   display: block;
-  background: rgba(255, 255, 255, 0.51);
+  background: rgba(255, 255, 255, 0.71);
   line-height: 36px;
 
 
