add contact form

--- a/templates/page/new/contacts.html
+++ b/templates/page/new/contacts.html
@@ -18,36 +18,38 @@
         <div class="contact-us">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                    <h2 class="block-title">Contact info</h2>
+                    <h2 class="block-title">Контакты</h2>
                     <div class="block-contact">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ut semper metus. Nullam a elit faucibus, tempor ex at, placerat ligula. Maecenas varius ex mi, elementum porttitor mauris gravida sit amet.</p>
                         <p></p>
                         <ul>
-                            <li><i class="zmdi zmdi-pin"></i><span>123 canberra Street, New York, USA</span></li>
-                            <li><i class="zmdi zmdi-phone"></i><span>+844 123 456 78 / +844 123 456 79</span></li>
-                            <li><i class="zmdi zmdi-email"></i><a href="/#" title="">tivatheme@gmail.com</a></li>
+                            <li><i class="zmdi zmdi-pin"></i><span>Дмитровское шоссе, 66</span></li>
+                            <li><i class="zmdi zmdi-phone"></i><span>+7 903 502-37-12</span></li>
+                            <li><i class="zmdi zmdi-email"></i><a href="/#" title="">info@flowersandgrasses.ru</a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                     <div class="contact-form clearfix">
-                        <h2 class="block-title">Send us a message</h2>
-                        <form id="cform">
+                        <h2 class="block-title">Мы на связи</h2>
+                        <form action="" method="post">{% csrf_token %}
                             <div class="row">
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="text" id="name" placeholder="Name*" required="">
+                                    <input type="text" name="name" placeholder="Имя" required >
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                    <input type="email" id="email" placeholder="Email*" required="">
+                                    <input type="email" name="email" placeholder="Эл почта" >
                                 </div>
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <input type="text" id="subject" placeholder="Subject*" required="">
+                                    <input type="text" name="company" placeholder="Компания" >
+                                </div> <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                    <input type="text" name="phone" placeholder="Телефон" required>
                                 </div>
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <textarea id="message" placeholder="Enter your message*" required=""></textarea>
+                                    <textarea name="message" placeholder="Сообщение" required=""></textarea>
                                 </div>
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <button type="submit" class="btn button btn-primary">Send message</button>
+                                    <button type="submit" class="btn button btn-primary">Отправить</button>
                                 </div>
                             </div>
                         </form>
@@ -56,8 +58,8 @@
             </div>
             <div id="contact-map" class="clearfix">
                 <div id="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3211.1724238398074!2d-118.24897607353269!3d34.06267085404055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c656a644b049%3A0xcf54a41e79d62b16!2s815+Sunset+Blvd%2C+Los+Angeles%2C+CA+90012%2C+USA!5e0!3m2!1sen!2s!4v1563166978191!5m2!1sen!2s" width="100%" height="600" frameborder="0" allowfullscreen=""></iframe>
-                </div>
+                      <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abe2f7d37251e58c9730f2e241bef8643d40b588213e08761c6e6d75f87c0d2c7&amp;width=1200&amp;height=600&amp;lang=ru_RU&amp;scroll=true%22%3E"></script>
+</div>
             </div>
         </div>
     </div>
