--- a/templates/page/checkout_guest.html
+++ b/templates/page/checkout_guest.html
@@ -31,7 +31,7 @@
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group ">
                             <label >Ваше Ф.И.О. <sup>*</sup> </label>
-                            <input  required="required" name="{{ form.name.name }}" type="text" class="form-control"  placeholder="Ваше имя" value="{% if not guest.name %}{% else %}{{ guest.name }}{% endif %}">
+                            <input  required="required" name="{{ form.name.name }}" type="text" class="form-control"  placeholder="Ваше ФИО" value="{% if not guest.name %}{% else %}{{ guest.name }}{% endif %}">
                         </div>
 
                         <div class="form-group required">
@@ -49,19 +49,19 @@
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group required">
                             <label for="InputEmail">Страна <sup>*</sup></label>
-                            <input  type="text" required="required" name="{{ form.country.name }}" class="form-control"  placeholder="Страна" value="{% if not guest.country %}{% else %}{{ guest.country }}{% endif %}">
+                            <input  type="text"  name="{{ form.country.name }}" class="form-control"  placeholder="Страна" value="{% if not guest.country %}{% else %}{{ guest.country }}{% endif %}">
                         </div>
                          <div class="form-group required">
                             <label for="InputEmail">Город <sup>*</sup></label>
-                            <input  type="text" required="required" name="{{ form.city.name }}" class="form-control"  placeholder="Город" value="{% if not guest.city %}{% else %}{{ guest.city }}{% endif %}">
+                            <input  type="text"  name="{{ form.city.name }}" class="form-control"  placeholder="Город" value="{% if not guest.city %}{% else %}{{ guest.city }}{% endif %}">
                         </div>
                          <div class="form-group required">
                             <label for="InputEmail">Индекс <sup>*</sup></label>
-                            <input  type="number" required="required" name="{{ form.post_code.name }}" class="form-control"  placeholder="Индекс" value="{% if not guest.post_code %}{% else %}{{ guest.post_code }}{% endif %}">
+                            <input  type="number"  name="{{ form.post_code.name }}" class="form-control"  placeholder="Индекс" value="{% if not guest.post_code %}{% else %}{{ guest.post_code }}{% endif %}">
                         </div>
                          <div class="form-group required">
                             <label for="InputEmail">Адрес доставки <sup>*</sup></label>
-                             <textarea  required="required" name="{{ form.address.name }}" class="form-control" rows="5"  placeholder="Адрес доставки">{% if not guest.address %}{% else %}{{ guest.address }}{% endif %}</textarea>
+                             <textarea   name="{{ form.address.name }}" class="form-control" rows="5"  placeholder="Адрес доставки">{% if not guest.address %}{% else %}{{ guest.address }}{% endif %}</textarea>
                         </div>
 
 <div class="form-group ">
