--- a/templates/header.html
+++ b/templates/header.html
@@ -136,6 +136,7 @@
                                     {#												<li class="dropdown"><a href='#'>БЛОГ </a></li>#}
                                     <li class="dropdown"><a href='{% url 'contacts' %}'>КОНТАКТЫ </a></li>
                                     <li class="dropdown"><a href='#'>О НАС</a></li>
+                                    <li class="dropdown"><a href='{% url 'dostavka' %}'>ДОСТАВКА</a></li>
                                     {% if not request.user.is_authenticated %}
                                         <li class="dropdown"><a href='{% url 'login' %}'>ВХОД/РЕГИСТРАЦИЯ</a></li>
 
