--- a/templates/page/new/contacts.html
+++ b/templates/page/new/contacts.html
@@ -20,7 +20,10 @@
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <h2 class="block-title">Контакты</h2>
                     <div class="block-contact">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ut semper metus. Nullam a elit faucibus, tempor ex at, placerat ligula. Maecenas varius ex mi, elementum porttitor mauris gravida sit amet.</p>
+                        <p>ИП Тихомирова Полина Владимировна<br>
+                            ИНН 772170041428<br>
+                            ОГРН 318774600455579
+                        </p>
                         <p></p>
                         <ul>
                             <li><i class="zmdi zmdi-pin"></i><span>Дмитровское шоссе, 66</span></li>
