--- a/templates/page/checkout_members.html
+++ b/templates/page/checkout_members.html
@@ -1,19 +1,19 @@
 {% load static %}
-<div style="margin-bottom: 40px" class="container main-container headerOffset">
- <div id="breadcrumb" class="clearfix">
-				<div class="container">
-					<div class="breadcrumb clearfix">
-						<ul class="ul-breadcrumb">
-							<li><a href="/" title="Home">Главная</a></li>
-                            <li><a href="{% url 'show_cart' %}" title="Home">Корзина</a></li>
-							<li><span>Оформление заказа</span></li>
-						</ul>
 
-					</div>
-				</div>
-			</div><!-- end breadcrumb -->
+    <div id="breadcrumb" class="clearfix">
+        <div class="container">
+            <div class="breadcrumb clearfix">
+                <ul class="ul-breadcrumb">
+                    <li><a href="/" title="Home">Главная</a></li>
+                    <li><a href="{% url 'show_cart' %}" title="Home">Корзина</a></li>
+                    <li><span style="color: #fff !important;">Оформление заказа</span></li>
+                </ul>
 
+            </div>
+        </div>
+    </div><!-- end breadcrumb -->
 
+<div style="margin-bottom: 40px" class="container">
     <div class="row ">
 
         <div class="col-lg-9 col-md-9 col-sm-7 col-xs-6 col-xxs-12">
@@ -23,10 +23,10 @@
 
 
 
-{{ form.errors }}
+            {{ form.errors }}
 
-                <form action="{% url 'checkout' %}" method="post">{% csrf_token %}
- <div class="row userInfo">
+            <form action="{% url 'checkout' %}" method="post">{% csrf_token %}
+                <div class="row userInfo">
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group required">
                             <label for="InputName">Ваше Ф.И.О. <sup>*</sup> </label>
@@ -37,7 +37,7 @@
                             <label for="InputEmail">Ваш E-Mail <sup>*</sup></label>
                             <input oninput="checkout_form_change();" type="email" required="required" name="{{ form.email.name }}" class="form-control"  placeholder="Ваш E-Mail" value="{{ client.email }}">
                         </div>
-                     <div class="form-group required">
+                        <div class="form-group required">
                             <label for="InputEmail">Ваш телефон <sup>*</sup></label>
                             <input oninput="checkout_form_change();" type="tel" required="required" name="{{ form.phone.name }}" class="form-control"  placeholder="Ваш телефон" value="{% if not client.phone %}{% else %}{{ client.phone }}{% endif %}">
                         </div>
@@ -48,95 +48,95 @@
                             <label for="InputEmail">Страна <sup>*</sup></label>
                             <input oninput="checkout_form_change();" type="text" required="required" name="{{ form.country.name }}" class="form-control"  placeholder="Страна" value="{% if not client.country %}{% else %}{{ client.country }}{% endif %}">
                         </div>
-                         <div class="form-group required">
+                        <div class="form-group required">
                             <label for="InputEmail">Город <sup>*</sup></label>
                             <input oninput="checkout_form_change();" type="text" required="required" name="{{ form.city.name }}" class="form-control"  placeholder="Город" value="{% if not client.city %}{% else %}{{ client.city }}{% endif %}">
                         </div>
-                         <div class="form-group required">
+                        <div class="form-group required">
                             <label for="InputEmail">Индекс <sup>*</sup></label>
                             <input oninput="checkout_form_change();" type="number" required="required" name="{{ form.post_code.name }}" class="form-control"  placeholder="Индекс" value="{% if not client.post_code %}{% else %}{{ client.post_code }}{% endif %}">
                         </div>
-                         <div class="form-group required">
+                        <div class="form-group required">
                             <label for="InputEmail">Адрес доставки <sup>*</sup></label>
-                             <textarea oninput="checkout_form_change();" required="required" name="{{ form.address.name }}" class="form-control" rows="5"  placeholder="Адрес доставки">{% if not client.address %}{% else %}{{ client.address }}{% endif %}</textarea>
+                            <textarea oninput="checkout_form_change();" required="required" name="{{ form.address.name }}" class="form-control" rows="5"  placeholder="Адрес доставки">{% if not client.address %}{% else %}{{ client.address }}{% endif %}</textarea>
                         </div>
 
 
 
                     </div>
-                        <input type="hidden" name="form_type" value="user_info">
+                    <input type="hidden" name="form_type" value="user_info">
 
-                      <div class="col-lg-12">
+                    <div class="col-lg-12">
                         <button id="checkout_user_info_btn"  style="display: none;"  type="submit" class="btn   btn-primary"><i class="fa fa-save"></i> &nbsp; Сохранить изменения</button>
                     </div>
-   </div>
-                </form>
+                </div>
+            </form>
 
 
-         <form action="{% url 'checkout' %}" method="post">{% csrf_token %}
+            <form action="{% url 'checkout' %}" method="post">{% csrf_token %}
 
 
-         <h3 class="boxes-title-1"><span>СПОСОБ ДОСТАВКИ ТОВАРА</span></h3>
-            {% for ship in shipping %}
-            <label class="radio">
-                <input type="radio" name="shipping"
-                       id="optionsRadios{{ ship.id }}" value="{{ ship.id }}" required="required">
-            {{ ship.name }}
-            </label>
-            {% endfor %}
+                <h3 class="boxes-title-1"><span>СПОСОБ ДОСТАВКИ ТОВАРА</span></h3>
+                {% for ship in shipping %}
+                    <label class="radio">
+                        <input type="radio" name="shipping"
+                               id="optionsRadios{{ ship.id }}" value="{{ ship.id }}" required="required">
+                        {{ ship.name }}
+                    </label>
+                {% endfor %}
 
 
-        <h3 class="boxes-title-1"><span>СПОСОБ ОПЛАТЫ ТОВАРА</span></h3>
-         {% for pay in payment %}
-            <label class="radio">
-                <input type="radio" name="payment"
-                       id="optionsRadios{{ pay.id }}{{ pay.id }}" value="{{ pay.id }}" required="required">
-            {{ pay.name }}
-            </label>
-            {% endfor %}
-            <input type="hidden" name="form_type" value="checkout">
+                <h3 class="boxes-title-1"><span>СПОСОБ ОПЛАТЫ ТОВАРА</span></h3>
+                {% for pay in payment %}
+                    <label class="radio">
+                        <input type="radio" name="payment"
+                               id="optionsRadios{{ pay.id }}{{ pay.id }}" value="{{ pay.id }}" required="required">
+                        {{ pay.name }}
+                    </label>
+                {% endfor %}
+                <input type="hidden" name="form_type" value="checkout">
                 {% if client.profile_ok %}
-                        <button id="checkout_btn"   type="submit" class="btn   btn-primary"><i class="fa fa-save"></i> &nbsp; ОФОРМИТЬ ЗАКАЗ</button>
+                    <button id="checkout_btn"   type="submit" class="btn   btn-primary"><i class="fa fa-save"></i> &nbsp; ОФОРМИТЬ ЗАКАЗ</button>
                 {% else %}
                     <div class="cartFooter w100 site-color"><strong>Ваш профиль заполнен не полностью. Проверьте Ваши данные <a class="link" href="{% url 'account_edit' %}">ТУТ</a> </strong> </div>
                 {% endif %}
-</form>
+            </form>
+        </div>
+        <!--/row end-->
+        <div class="col-lg-3 col-md-3 col-sm-5 rightSidebar col-xs-6 col-xxs-12 ">
+            <div class="w100 cartMiniTable">
+                <table id="cart-summary" class="std table">
+                    <tbody>
+                    <tr>
+                        <td style="vertical-align: middle;" width="40%">Общая стоимость :</td>
+                        <td style="vertical-align: middle;" id="cart_subtotal_price_side" class="price">{{ total_cart_price }} &#8381;</td>
+                    </tr>
+
+                    <tr class="cart-total-price ">
+                        <td style="vertical-align: middle;">Скидка по промо-коду :</td>
+                        <td style="vertical-align: middle;" id="promo_value" class="price">{{ promo_discount_value }} %</td>
+                    </tr>
+
+                    <tr>
+                        <td style="vertical-align: middle;"> ИТОГО</td>
+                        <td style="font-size: 30px; font-weight: 600; vertical-align: middle;" class="site-color" id="cart_total_price_side">{{ total_cart_price_with_discount }} &#8381;</td>
+                    </tr>
+
+                    </tbody>
+
+                </table>
             </div>
-            <!--/row end-->
-   <div class="col-lg-3 col-md-3 col-sm-5 rightSidebar col-xs-6 col-xxs-12 ">
-           <div class="w100 cartMiniTable">
-                            <table id="cart-summary" class="std table">
-                                <tbody>
-                                <tr>
-                                    <td style="vertical-align: middle;" width="40%">Общая стоимость :</td>
-                                    <td style="vertical-align: middle;" id="cart_subtotal_price_side" class="price">{{ total_cart_price }} &#8381;</td>
-                                </tr>
-
-                                <tr class="cart-total-price ">
-                                    <td style="vertical-align: middle;">Скидка по промо-коду :</td>
-                                    <td style="vertical-align: middle;" id="promo_value" class="price">{{ promo_discount_value }} %</td>
-                                </tr>
-
-                                <tr>
-                                    <td style="vertical-align: middle;"> ИТОГО</td>
-                                    <td style="font-size: 30px; font-weight: 600; vertical-align: middle;" class="site-color" id="cart_total_price_side">{{ total_cart_price_with_discount }} &#8381;</td>
-                                </tr>
-
-                                </tbody>
-
-                            </table>
-                        </div>
             <!--  /cartMiniTable-->
 
         </div>
-        </div>
-
-        <!--/rightSidebar-->
-
     </div>
-    <!--/row-->
 
-    <div style="clear:both"></div>
+    <!--/rightSidebar-->
+
+</div>
+<!--/row-->
+
+<div style="clear:both"></div>
 </div>
 <!-- /.main-container-->
 <div class="gap"></div>
