--- a/templates/page/new/_item.html
+++ b/templates/page/new/_item.html
@@ -13,29 +13,29 @@
 {#															<span class="label-sale label">Sale</span>#}
 {#															<span class="label-reduction label">-5%</span>#}
                                                         <div class="item-buttons">
-                                                        <div style="    border: 1px solid #ffffff; padding: 3px;">
-                                                            <a class="ajax_add_to_cart_button item-button-cart" href="javascript:void(0)"
-                                                                   id="{{ item.id }}_submit"
-                                                                    data-item_id="{{ item.id }}"
-                                                                    data-item_name="{{ item.name }}"
-                                                                    data-item_price="{{ item.price }}"
-
-                                                                    data-item_image="{{ item.itemimage_set.first.image_small }}"
-                                                                    onclick="quick_add_to_cart(this)"  rel="nofollow" title="В корзину">В КОРЗИНУ</a>
-                                                        </div>
-                                                          <div style="    border: 1px solid #ffffff; padding: 3px;">
-                                                                  {% if item.id in wishlist_ids %}
-                                                                <a onclick="return false;" data-placement="left" data-original-title="Add to Wishlist"
-                                                                   data-toggle="tooltip" class="addToWishlist item-button-wishlist">В ИЗБРАННОМ
-                                                                </a>
-                                                            {% else %}
-                                                                <a onclick="wishlist_add({{ item.id }});return false;" data-placement="left" data-original-title="В закладки" data-toggle="tooltip"
-                                                                   class="addToWishlist item-button-wishlist">
-                                                                В ИЗБРАННОЕ
-                                                                </a>
-                                                            {% endif %}
-
-                                                        </div>
+{#                                                        <div style="    border: 1px solid #ffffff; padding: 3px;">#}
+{#                                                            <a class="ajax_add_to_cart_button item-button-cart" href="javascript:void(0)"#}
+{#                                                                   id="{{ item.id }}_submit"#}
+{#                                                                    data-item_id="{{ item.id }}"#}
+{#                                                                    data-item_name="{{ item.name }}"#}
+{#                                                                    data-item_price="{{ item.price }}"#}
+{##}
+{#                                                                    data-item_image="{{ item.itemimage_set.first.image_small }}"#}
+{#                                                                    onclick="quick_add_to_cart(this)"  rel="nofollow" title="В корзину">В КОРЗИНУ</a>#}
+{#                                                        </div>#}
+{#                                                          <div style="    border: 1px solid #ffffff; padding: 3px;">#}
+{#                                                                  {% if item.id in wishlist_ids %}#}
+{#                                                                <a onclick="return false;" data-placement="left" data-original-title="Add to Wishlist"#}
+{#                                                                   data-toggle="tooltip" class="addToWishlist item-button-wishlist">В ИЗБРАННОМ#}
+{#                                                                </a>#}
+{#                                                            {% else %}#}
+{#                                                                <a onclick="wishlist_add({{ item.id }});return false;" data-placement="left" data-original-title="В закладки" data-toggle="tooltip"#}
+{#                                                                   class="addToWishlist item-button-wishlist">#}
+{#                                                                В ИЗБРАННОЕ#}
+{#                                                                </a>#}
+{#                                                            {% endif %}#}
+{##}
+{#                                                        </div>#}
 
 
 
@@ -45,6 +45,30 @@
 
                                                         </div>
 														</div>
+                                                        <div style="position: absolute;  bottom: 10px;  left: 0; right: 0; margin: auto;">
+                                                            <a class="ajax_add_to_cart_button button btn" href="javascript:void(0)"
+                                                                   id="{{ item.id }}_submit"
+                                                                    data-item_id="{{ item.id }}"
+                                                                    data-item_name="{{ item.name }}"
+                                                                    data-item_price="{{ item.price }}"
+
+                                                                    data-item_image="{{ item.itemimage_set.first.image_small }}"
+                                                                    onclick="quick_add_to_cart(this)"  rel="nofollow" title="В корзину"><i class="zmdi zmdi-shopping-cart"></i></a>
+                                                            {% if item.id in wishlist_ids %}
+                                                                <a onclick="return false;" data-placement="left" data-original-title="Add to Wishlist"
+                                                                   data-toggle="tooltip" class="ajax_add_to_cart_button button btn"><i class="zmdi zmdi-favorite"></i>
+                                                                </a>
+                                                            {% else %}
+                                                                <a onclick="wishlist_add({{ item.id }});return false;" data-placement="left" data-original-title="В закладки" data-toggle="tooltip"
+                                                                   class="ajax_add_to_cart_button button btn">
+                                                                <i class="zmdi zmdi-favorite-outline"></i>
+                                                                </a>
+                                                            {% endif %}
+
+                                                        </div>
+
+
+
 
 													</div><!--end left block -->
 													<div style="margin-top: 20px;" class="right-block">
